added code to run tests in jenkins (#4214)
* added code to run tests in jenkins

* fixed Jenkinsfile.

* fixed scripts.

* added missing test env vars.

* more script fixes.

* final test maybe.

* fixed typos.

* try again.

* more improvements

* sudo

* internal network

* run tests

* not remove the container before running the tests

* run tests

* fix method

* echo the message not run

* test if it will interpolate

* not use file as env var docker

* change path

* removed old script to run tests ci

* little refactor on jenkinsfile.

* fix dependencies.

Co-authored-by: Gabriela Navarro <gnavarro@bayesianlabs.io>

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "lint": "standard --parser=babel-eslint",
     "test": "mocha",
+    "test:ci": "mocha",
     "build": "rollup -c",
     "build:dev": "rollup -c",
     "build:prod": "NODE_ENV=production yarn build",
