--- a/package.json
+++ b/package.json
@@ -27,11 +27,9 @@
   },
   "dependencies": {
     "@babel/runtime": "7.5.5",
+    "bsv": "^2.0.0-beta.42",
     "isomorphic-fetch": "2.2.1",
     "moment": "2.24.0"
-  },
-  "peerDependencies": {
-    "bsv": ">1.0.0"
   },
   "devDependencies": {
     "@babel/cli": "7.5.5",
