--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@babel/runtime": "7.5.5",
-    "bsv": "^2.0.0-beta.42",
+    "bsv": "2.0.4",
     "isomorphic-fetch": "2.2.1",
     "moment": "2.24.0"
   },
