replace "Yours Inc." (#4408)
Yours Inc. is NOT the owner of Money Button. Money Button has been acquired by
Fermatted Drives Limited. We need to remove all references to Yours Inc. as it
is not the entity that owns MB and will be liquidated by February.

Co-authored-by: Miguel Duarte <miguelfeliped@gmail.com>

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dev": "yarn build:watch"
   },
   "repository": "https://github.com/moneybutton/yours",
-  "author": "Yours Inc.",
+  "author": "Fermatted Drives Limited",
   "license": "Open-BSV",
   "publishConfig": {
     "access": "public"
