--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/core": "7.5.5",
     "@babel/plugin-proposal-object-rest-spread": "7.5.5",
     "@babel/plugin-transform-runtime": "7.5.5",
+    "@babel/polyfill": "7.12.1",
     "@babel/preset-env": "7.5.5",
     "@rollup/plugin-commonjs": "11.0.1",
     "@rollup/plugin-node-resolve": "7.0.0",
