--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "@moneybutton/brfc",
   "version": "0.38.7",
   "description": "Money Button isomorphic brfc implementation.",
-  "main": "dist/brfc.cjs.js",
-  "module": "dist/brfc.esm.js",
-  "unpkg": "dist/brfc.iife.js",
+  "main": "src/index",
   "library": "brfc",
   "files": [
     "dist/**"
@@ -13,11 +11,6 @@
     "lint": "standard",
     "test": "mocha",
     "test:ci": "mocha",
-    "build": "rollup -c",
-    "build:dev": "rollup -c",
-    "build:prod": "NODE_ENV=production yarn build",
-    "build:watch": "yarn build -w",
-    "dev": "yarn build:watch",
     "cli": "node ./src/cli.js"
   },
   "repository": "https://github.com/moneybutton/yours",
@@ -32,20 +25,12 @@
     "moment": "2.24.0"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "11.0.1",
-    "@rollup/plugin-node-resolve": "7.0.0",
-    "@rollup/plugin-replace": "2.3.0",
     "babel-eslint": "9.0.0",
     "bdd-lazy-var": "2.5.1",
     "chai": "4.2.0",
     "dotenv-cli": "2.0.1",
     "http-server": "0.12.3",
     "mocha": "6.2.3",
-    "rollup": "1.29.0",
-    "rollup-plugin-babel": "4.3.3",
-    "rollup-plugin-node-builtins": "2.1.2",
-    "rollup-plugin-node-globals": "1.4.0",
-    "rollup-plugin-terser": "5.2.0",
     "should": "13.2.1",
     "standard": "12.0.1"
   },
