--- a/package.json
+++ b/package.json
@@ -2,15 +2,22 @@
   "name": "@moneybutton/brfc",
   "version": "0.38.7",
   "description": "Money Button isomorphic brfc implementation.",
-  "main": "src/index",
+  "main": "dist/brfc.cjs.js",
+  "module": "dist/brfc.esm.js",
+  "unpkg": "dist/brfc.iife.js",
   "library": "brfc",
   "files": [
     "dist/**"
   ],
   "scripts": {
-    "lint": "standard",
+    "lint": "standard --parser=babel-eslint",
     "test": "mocha",
     "test:ci": "mocha",
+    "build": "rollup -c",
+    "build:dev": "rollup -c",
+    "build:prod": "NODE_ENV=production yarn build",
+    "build:watch": "yarn build -w",
+    "dev": "yarn build:watch",
     "cli": "node ./src/cli.js"
   },
   "repository": "https://github.com/moneybutton/yours",
@@ -20,17 +27,32 @@
     "access": "public"
   },
   "dependencies": {
+    "@babel/runtime": "7.5.5",
     "bsv": "2.0.7",
     "isomorphic-fetch": "2.2.1",
     "moment": "2.24.0"
   },
   "devDependencies": {
+    "@babel/cli": "7.5.5",
+    "@babel/core": "7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "7.5.5",
+    "@babel/plugin-transform-runtime": "7.5.5",
+    "@babel/polyfill": "7.12.1",
+    "@babel/preset-env": "7.5.5",
+    "@rollup/plugin-commonjs": "11.0.1",
+    "@rollup/plugin-node-resolve": "7.0.0",
+    "@rollup/plugin-replace": "2.3.0",
     "babel-eslint": "9.0.0",
     "bdd-lazy-var": "2.5.1",
     "chai": "4.2.0",
     "dotenv-cli": "2.0.1",
     "http-server": "0.12.3",
     "mocha": "6.2.3",
+    "rollup": "1.29.0",
+    "rollup-plugin-babel": "4.3.3",
+    "rollup-plugin-node-builtins": "2.1.2",
+    "rollup-plugin-node-globals": "1.4.0",
+    "rollup-plugin-terser": "5.2.0",
     "should": "13.2.1",
     "standard": "12.0.1"
   },
