--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@moneybutton/brfc",
-  "version": "0.38.9",
+  "version": "0.38.10",
   "description": "Money Button isomorphic brfc implementation.",
   "main": "dist/brfc.cjs.js",
   "module": "dist/brfc.esm.js",
@@ -20,7 +20,7 @@
     "dev": "yarn build:watch",
     "cli": "node ./src/cli.js"
   },
-  "repository": "https://github.com/moneybutton/yours",
+  "repository": "https://github.com/moneybutton/brfc",
   "author": "Fermatted Drives Limited",
   "license": "Open-BSV",
   "publishConfig": {
