--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
   "dependencies": {
     "@babel/runtime": "7.5.5",
     "bsv": "2.0.7",
-    "isomorphic-fetch": "2.2.1",
-    "moment": "2.24.0"
+    "isomorphic-fetch": "^3.0.0",
+    "moment": "^2.29.4"
   },
   "devDependencies": {
-    "@babel/cli": "7.5.5",
+    "@babel/cli": "^7.21.0",
     "@babel/core": "7.5.5",
     "@babel/plugin-proposal-object-rest-spread": "7.5.5",
     "@babel/plugin-transform-runtime": "7.5.5",
@@ -44,14 +44,14 @@
     "@rollup/plugin-node-resolve": "7.0.0",
     "@rollup/plugin-replace": "2.3.0",
     "babel-eslint": "9.0.0",
-    "bdd-lazy-var": "2.5.1",
+    "bdd-lazy-var": "^2.6.1",
     "chai": "4.2.0",
-    "mocha": "6.2.3",
+    "mocha": "^10.2.0",
     "rollup": "1.29.0",
     "rollup-plugin-babel": "4.3.3",
-    "rollup-plugin-node-builtins": "2.1.2",
+    "rollup-plugin-node-builtins": "^2.0.0",
     "rollup-plugin-node-globals": "1.4.0",
-    "rollup-plugin-terser": "5.2.0",
+    "rollup-plugin-terser": "^5.3.1",
     "should": "13.2.1",
     "standard": "12.0.1"
   },
