--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@moneybutton/brfc",
   "version": "0.38.10",
   "description": "Money Button isomorphic brfc implementation.",
-  "main": "dist/brfc.cjs.js",
+  "main": "dist/brfc.cjs",
+  "type": "module",
   "module": "dist/brfc.esm.js",
   "unpkg": "dist/brfc.iife.js",
   "library": "brfc",
@@ -13,8 +14,8 @@
     "lint": "standard --parser=babel-eslint",
     "test": "mocha",
     "test:ci": "mocha",
-    "build": "rollup -c",
-    "build:dev": "rollup -c",
+    "build": "rollup -c --bundleConfigAsCjs",
+    "build:dev": "rollup -c --bundleConfigAsCjs",
     "build:prod": "NODE_ENV=production yarn build",
     "build:watch": "yarn build -w",
     "dev": "yarn build:watch",
@@ -27,33 +28,33 @@
     "access": "public"
   },
   "dependencies": {
-    "@babel/runtime": "7.5.5",
-    "bsv": "2.0.7",
+    "@babel/runtime": "7.21.5",
+    "bsv": "2.0.10",
     "isomorphic-fetch": "^3.0.0",
     "moment": "^2.29.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.21.0",
-    "@babel/core": "7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "7.5.5",
-    "@babel/plugin-transform-runtime": "7.5.5",
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "7.21.8",
+    "@babel/plugin-proposal-object-rest-spread": "7.20.7",
+    "@babel/plugin-transform-runtime": "7.21.4",
     "@babel/polyfill": "7.12.1",
-    "@babel/preset-env": "7.5.5",
-    "@babel/register": "^7.18.9",
-    "@rollup/plugin-commonjs": "11.0.1",
-    "@rollup/plugin-node-resolve": "7.0.0",
-    "@rollup/plugin-replace": "2.3.0",
+    "@babel/preset-env": "7.21.5",
+    "@babel/register": "^7.21.0",
+    "@rollup/plugin-commonjs": "24.1.0",
+    "@rollup/plugin-node-resolve": "15.0.2",
+    "@rollup/plugin-replace": "5.0.2",
     "babel-eslint": "9.0.0",
     "bdd-lazy-var": "^2.6.1",
-    "chai": "4.2.0",
+    "chai": "4.3.7",
     "mocha": "^10.2.0",
-    "rollup": "1.29.0",
+    "rollup": "3.21.6",
     "rollup-plugin-babel": "4.3.3",
     "rollup-plugin-node-builtins": "^2.0.0",
     "rollup-plugin-node-globals": "1.4.0",
     "rollup-plugin-terser": "^5.3.1",
-    "should": "13.2.1",
-    "standard": "12.0.1"
+    "should": "13.2.3",
+    "standard": "17.0.0"
   },
   "standard": {
     "globals": [
